--- a/OutlookEventsPlugin/OutlookEventsPlugin.csproj
+++ b/OutlookEventsPlugin/OutlookEventsPlugin.csproj
@@ -46,6 +46,20 @@
         Add-in host application
     -->
     <OfficeApplication>Outlook</OfficeApplication>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.0</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
   </PropertyGroup>
   <!--
     This section defines properties that are set when the "Debug" configuration is selected.
