--- a/OutlookEventsPlugin/OutlookEventsPlugin.csproj
+++ b/OutlookEventsPlugin/OutlookEventsPlugin.csproj
@@ -202,6 +202,9 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="PrintPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
